<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamtreehouse.com.movienight.MainActivity"
    app:layout_constraintTop_toTopOf="@+id/genrespinnerLinearLayout"
    tools:layout_editor_absoluteX="0dp"
    android:layout_marginTop="0dp">

    <SeekBar
        android:textSize="20sp"
        android:id="@+id/ratingSeekBar"
        android:layout_width="345dp"
        android:layout_height="17dp"
        android:layout_marginLeft="16dp"
        android:max="10"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/minimumRatingTextView"
        app:layout_constraintRight_toLeftOf="@+id/ratingTextValue"
        android:layout_marginRight="20dp" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/ratingTextValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minimumRatingTextView" />

    <TextView
        android:id="@+id/minimumRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="8dp"
        android:text="@string/minimum_rating"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCheckbox" />

    <EditText
        android:id="@+id/minimumRatingsTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/minimum_ratings"
        android:inputType="number"
        android:textColorHint="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingSeekBar" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/minimumRatingsTextView"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="horizontal">

            <TextView
                android:textSize="20sp"
                android:id="@+id/fromDate"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/from_date_optional"
                android:inputType="date"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColorHint="@android:color/black"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="188dp" />

            <TextView
                android:textSize="20sp"
                android:id="@+id/toDate"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/to_date_optional"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColorHint="@android:color/black"
                android:visibility="visible"
                tools:layout_editor_absoluteX="182dp"
                tools:layout_editor_absoluteY="188dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:textSize="20sp"
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/submit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sortByLinearLayout" />

    <CheckBox
        android:id="@+id/tvCheckbox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:text="TV"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/movieCheckbox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/movieCheckbox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical|fill_vertical|fill_horizontal"
        android:text="Movies"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:id="@+id/sortByLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/genresSelectedTextView">

        <Spinner
            android:id="@+id/sortBySpinner"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </LinearLayout>

    <TextView
        android:id="@+id/genresSelectedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="Genres Chosen: "
        android:textColor="@android:color/background_dark"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/genrespinnerLinearLayout"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MovieNight!"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:id="@+id/genrespinnerLinearLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:prompt="@string/hint"
            android:spinnerMode="dialog"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
